--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
 }
 body {
     margin: 0;
-    font-size: 18px;
+    font-size: 17px;
     font-family:Times New Roman, sans-serif;
     line-height:1em;
 
@@ -32,7 +32,7 @@ a {
     text-decoration: none;
 }
 .post a:visited{
-	color:purple;
+    color:purple;
 }
 button {
     overflow: visible font: inherit;
@@ -118,7 +118,7 @@ div.shell-thread > div {
     padding: 7px;
     margin-top: 7px;
     display: block;
-	position:relative;
+    position:relative;
 }
 .columnwidth {
     max-width: 49%;
@@ -129,6 +129,7 @@ div.shell-thread > div {
 }
 .boardnav {
     overflow:auto;
+  color:rgba(0,0,0,0.5);
 }
 .boardnav img{
     margin:-5px 2px -2px;
@@ -138,7 +139,6 @@ div.shell-thread > div {
     display: none;
 }
 .boardnav .right {
-    font-weight:bold;
     float: right;
     display: inline-block;
 }
@@ -163,7 +163,7 @@ div.shell-thread > div {
     display: flex;
 }
 .footer > div > div {
-    height: 13em;
+    height: 12em;
     position: relative;
 }
 #newthread {
@@ -178,8 +178,6 @@ div.shell-thread > div {
 }
 #threadlist .links {
     background:#CCFFCC;
-    #border-top:double 7px #CCFFCC;
-    #background-clip: padding-box;
     box-shadow:0 -7px 7px #CCFFCC;
     text-align: center;
     font-weight: bold;
@@ -193,7 +191,7 @@ div.shell-thread > div {
     position:absolute;
     right:10px;
     top:-20px;
-	padding-top:26px;
+    padding-top:26px;
     z-index:5;
 }
 
@@ -279,7 +277,7 @@ div.shell-thread > div {
     z-index: 100;
     max-width:600px;
     left: -2000px;
-	pointer-events: none;
+    pointer-events: none;
 }
 /* Subback */
 
@@ -382,7 +380,7 @@ blockquote:hover {
         width: 95%;
         margin: .5em 2.5%;
         float: none;
-		min-width:initial;
+        min-width:initial;
     }
     #newthread > div{
         height:initial;
